[6] refactoring the use of DataFetcher interface